# tutor-contrib-sentry

./: CHANGELOG.md  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
changelog.d/: 20251202_101454_moises.gonzalez_ulmo.md
tutorsentry/: __about__.py  plugin.py
tutorsentry/patches/: openedx-common-settings  openedx-dockerfile-post-python-requirements
