[project]
name = "tutor-contrib-sentry"
version = "20.0.0"
description = "Sentry Integration for Open edX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPLv3"}
authors = [
    {name = "eduNEXT", email = "technical@edunext.co"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor~=20.0",
]

[project.urls]
homepage = "https://github.com/eduNEXT/tutor-contrib-sentry"
repository = "https://github.com/eduNEXT/tutor-contrib-sentry"
"Issue tracker" = "https://github.com/eduNEXT/tutor-contrib-sentry/issues"

[project.entry-points."tutor.plugin.v1"]
sentry = "tutorsentry.plugin"

[tool.wheel]
universal = true

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
lint.select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = "Added, Changed, Fixed, Removed"
format = "md"
md_header_level = 2
new_fragment_template = "file: changelog.d/scriv/new_fragment.md.j2"
entry_title_template = "file: changelog.d/scriv/entry_title.md.j2"

[tool.uv.build-backend]
module-root = "."
module-name = "tutorsentry"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "scriv>=1.7.0",
    "ty>=0.0.1a29",
]
